kubernetes/security/manifests/dvwa_webapp/deployment-dvwa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-web
  namespace: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa-web
  template:
    metadata:
      labels:
        app: dvwa-web
    spec:
      serviceAccountName: dvwa
      # 토큰을 마운트하지 않게 설정
      # automountServiceAccountToken: false
      containers:
      - name: dvwa
        # 원본 image
        # image: cytopia/dvwa:php-8.1
        image: choisunguk/dvwa_webapp:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.3"
            memory: 256Mi
          limits:
            cpu: "0.3"
            memory: 256Mi
