kubernetes/security/manifests/dvwa_webapp/deployment-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-mysql
  namespace: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa-mysql
      tier: backend
  template:
    metadata:
      labels:
        app: dvwa-mysql
        tier: backend
    spec:
      containers:
      - name: mysql
        image: mariadb:10.1
        resources:
          requests:
            cpu: "0.3"
            memory: 256Mi
          limits:
            cpu: "0.3"
            memory: 256Mi
        ports:
        - containerPort: 3306
