kubernetes/security/manifests/dvwa_webapp/service-dvwa.yml
apiVersion: v1
kind: Service
metadata:
  name: dvwa
spec:
  selector:
    app: dvwa-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
