kubernetes/security/manifests/dvwa_webapp/service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: dvwa-mysql-service
  namespace: dvwa
spec:
  selector:
    app: dvwa-mysql
    tier: backend
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
